# automl-comparison

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
data/: test.csv  train.csv
src/: args.py  metrics.py  plots.py
src/dataset/: csv_handle.py
